# project-mute-button

./: README.md
firmware/: Dockerfile  README.md  docker-compose.yml  mute.py  pyproject.toml
hardware/: fp-lib-table  project-mute-button-cache.lib  project-mute-button.kicad_pcb  project-mute-button.pro  project-mute-button.sch
hardware/gerbers/: project-mute-button-B_Cu.gbr  project-mute-button-B_Mask.gbr  project-mute-button-B_Paste.gbr  project-mute-button-B_SilkS.gbr  project-mute-button-Edge_Cuts.gbr  project-mute-button-F_Cu.gbr  project-mute-button-F_Mask.gbr  project-mute-button-F_Paste.gbr  project-mute-button-F_SilkS.gbr  project-mute-button-NPTH.drl  project-mute-button-PTH.drl  project-mute-button-job.gbrjob
