[tool.poetry]
name = "host"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
adafruit-blinka = {git = "https://github.com/ezio-melotti/Adafruit_Blinka.git", rev = "multiple-mcp2221-improved"}
hidapi = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
